update release version

--- a/ais-stream/requirements.txt
+++ b/ais-stream/requirements.txt
@@ -4,4 +4,4 @@
 flask_api
 google-cloud-pubsub
 google-cloud-bigquery
-ais-tools@git+https://github.com/GlobalFishingWatch/ais-tools@6a9eb435eef5f2ddf29db2ba8539ef4bbefc64dc
+ais-tools@git+https://github.com/GlobalFishingWatch/ais-tools@v0.1.1-alpha
