--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -16,7 +16,7 @@ jobs:
     strategy:
       matrix:
         os:
-          - macos-11
+          - macos-latest
           - ubuntu-latest
         python-version:
           - "3.8"
