--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,7 +17,7 @@ dependencies = [
     "Click",
     "gpxpy",
     "requests",
-    "bitarray",
+    "bitarray>=3.0.0",
     "cbitstruct",
     "udatetime",
     "xxhash"
